@@ -1,5 +1,5 @@
 # Build stage
-FROM openjdk:8-jdk as builder
+FROM openjdk:11-jdk as builder
 
 # install node
 RUN curl -sL https://deb.nodesource.com/setup_12.x | bash - && \
@@ -31,13 +31,17 @@ RUN ./gradlew downloadDependencies :radar-auth:shadowJar
 # now we copy our application source code and build it
 COPY radar-auth radar-auth
 COPY src src
-RUN ./gradlew -s bootRepackage
+RUN ./gradlew -s bootWar
 
 # Run stage
-FROM openjdk:8-jre-alpine
+FROM openjdk:11-jre-slim
 
 ENV SPRING_OUTPUT_ANSI_ENABLED=ALWAYS \
     JHIPSTER_SLEEP=0
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+  curl \
+  && rm -rf /var/lib/apt/lists/*
 
 # Add the war and changelogs files from build stage
 COPY --from=builder /app/build/libs/*.war /app.war
@@ -46,4 +50,14 @@ COPY --from=builder /app/src/main/docker/etc /mp-includes
 EXPOSE 8080 5701/udp
 CMD echo "The application will start in ${JHIPSTER_SLEEP}s..." && \
     sleep ${JHIPSTER_SLEEP} && \
-    java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -cp /mp-includes:/app.war org.springframework.boot.loader.WarLauncher
+    java $JAVA_OPTS \
+        -Djava.security.egd=file:/dev/./urandom \
+        --add-modules java.se \
+        --add-exports java.base/jdk.internal.ref=ALL-UNNAMED \
+        --add-opens java.base/java.lang=ALL-UNNAMED \
+        --add-opens java.base/java.nio=ALL-UNNAMED \
+        --add-opens java.base/sun.nio.ch=ALL-UNNAMED \
+        --add-opens java.management/sun.management=ALL-UNNAMED \
+        --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED \
+        -cp /mp-includes:/app.war \
+        org.springframework.boot.loader.WarLauncher
